# tezedge

./: .drone.yml
apps/deploy_monitoring/: docker-compose.deploy.latest-release.yml  docker-compose.deploy.latest.yml  docker-compose.deploy.mainnet.latest-release.yml
apps/deploy_monitoring/src/: deploy_with_compose.rs
apps/node_monitoring/: docker-compose.deploy.mainnet.latest-release.yml
apps/watchdog/src/: deploy_with_compose.rs  display_info.rs
crypto/src/: hash.rs
docker/distroless/: Dockerfile  tezedge.config
light_node/: Cargo.toml
light_node/etc/tezedge/: tezedge.config
light_node/etc/tezedge_sandbox/: tezedge_sandbox.config
light_node/src/: configuration.rs  main.rs
protocol_runner/: Cargo.toml
protocol_runner/src/: main.rs
rpc/src/server/: router.rs
rpc/src/services/: context.rs
sandbox/: build.rs
shell/src/: chain_feeder.rs  chain_manager.rs  context_listener.rs  peer_branch_bootstrapper.rs  shell_automaton_manager.rs  shell_channel.rs
shell/src/state/: chain_state.rs  data_requester.rs
shell/tests/common/: infra.rs
shell_automaton/src/block_applier/: block_applier_actions.rs  block_applier_effects.rs  block_applier_state.rs
shell_automaton/src/current_head/: current_head_effects.rs
shell_automaton/src/mempool/: mempool_reducer.rs
shell_automaton/src/rpc/: rpc_effects.rs
storage/: Cargo.toml
storage/src/: lib.rs
storage/tests/: context.rs  storage_for_shell.rs
tezos/context/: Cargo.toml
tezos/context-tool/: Cargo.toml
tezos/context-tool/src/: log.rs  main.rs  stats.rs
tezos/new_context/: Cargo.toml
(+97 files in other folders)
