[package]
name = "context-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }

# local dependencies
crypto = { path = "../../crypto" }
tezos_context = { path = "../context" }
